Fix spacing between task checkboxes and text.

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -153,3 +153,7 @@ code {
   margin-top: 2em;
   border-top: 1px solid #333333;
 }
+
+input.task-list-item-checkbox {
+  margin-right: 8px;
+}
